<resources>
    <string name="app_name">ClientApp</string>

    <string name="title_audio">Запись звука с микрофона</string>
    <string name="title_photo">Запись фото</string>
    <string name="title_geofence">Geofence</string>


    <string name="action_auth">Авторизоваться</string>
    <string name="action_record">Запись</string>
    <string name="description_record">Нажмите и удерживайте кнопку для записи звука</string>
    <string name="record_audio_success">Звук успешно записан</string>

    <string name="error_permission">Пожалуйста, разрешите запись информации на устройство</string>
    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>
    <string name="radius">radius</string>
    <string name="description_geofence">Введите данные geofence зоны</string>
    <string name="action_subscribe">Подписаться</string>
    <string name="action_unsubscribe">Отписаться</string>
    <string name="unknow_error">Что-то пошло не так</string>

    <string name="post_success">Запись успешно опубликована</string>

    <string name="error_empty_geo_data">Пожалуйста, заполните все поля</string>
    <!--<string name="enter_in">Вход в %1$f, %2$f, %3$d</string>-->
    <!--<string name="exit_from">Выход из %1$f, %2$f, %3$d</string>-->

</resources>
